--- a/content/blogs/Myeducation.Rmd
+++ b/content/blogs/Myeducation.Rmd
@@ -10,7 +10,7 @@ date: "2017-10-31T22:26:13-05:00"
 draft: false
 # image: pic08.jpg
 keywords: ""
-slug: myeducation
+slug: Myeducation
 title: My Education
 ---
 My education
