--- a/content/blogs/My_Projects.Rmd
+++ b/content/blogs/My_Projects.Rmd
@@ -7,29 +7,28 @@ draft: false
 # image: pic07.jpg
 keywords: ""
 slug: my_projects
-title: My Projects
+title: Machine Learning for Additive Manufacturing
 ---
 
-## 1 | Machine Learning for Additive Manufacturing 
-### Creating a machine learning classification algorithm for additive manufacturing using *MATLAB*
 
-> Part of my final year thesis for completion of my Bachelor in Mechanical Engineering at the University of Warwick
+## Creating a machine learning classification algorithm for additive manufacturing using *MATLAB*
+
+> **Part of my final year thesis for completion of my Bachelor in Mechanical Engineering at the University of Warwick. I Worked with Dmitry Isakov, Research Fellow at the University of Oxford, and I obtained an 87% on the project. I then was offered a position as student researcher.**
 
 ### Abstract
 
 Methodology and analysis of the development of a software and a machine learning (ML) algorithm for image extraction and classification of a Selective Laser Melting (SLM) additive manufacturing (AM) process is presented. The programmes were created by means of the MATLAB R2020b software package and the video of the surface of the powder bed of the SLM printer was captured using the XirisTM XVC-1100 smart camera. For all frames of the video captured, mean b* colour values were obtained and compared, identifying the precise frames required for analysis. An accuracy of 99% was achieved, proving the aptness of the software for Laser-Powder Bed Fusion layer-wise quality monitoring. Thereafter, a Bag of Visual Words (BoVW) ML algorithm was trained using the collected frames, which was subsequently tested, achieving a 92.1% accuracy. Several validation techniques were utilised, confirming software integrity. Finally, the impact of the developed programmes was outlined, focusing on their significance for research and evaluation of the effect of AM process parameters in print quality, and the opportunities for implementation in real-time AM quality monitoring systems.
 
 
-```{r image, echo = FALSE,  out.width="50%"}
-
-knitr:: include_graphics("/img/Tech_Report2.png", error = FALSE)
-
-```
-
-
 ### The Code
 
 #### Code for image database collection 
+
+*Figure 1: Flowchart of process carried out*
+
+```{r image 2, echo = FALSE, out.width="60%"}
+knitr:: include_graphics("/img/Tech_Report.png", error = FALSE)
+```
 
 *Read video and initialise variables.*
 
@@ -118,6 +117,14 @@ Published with MATLAB® R2020b
  
 #### Code for Image Classification 
 
+*Figure 2: Flowchart of process carried out*
+
+```{r image, echo = FALSE,  out.width="60%"}
+
+knitr:: include_graphics("/img/Tech_Report2.png", error = FALSE)
+
+```
+
 *Establish datasets using ImageDataStore function.*
 
     File = fullfile('C:\Training and Test Set');
@@ -130,15 +137,11 @@ Published with MATLAB® R2020b
 
 *Partition 336 images for training and 228 for testing.*
 
- 
-```{r image, echo = FALSE,  out.width="50%"}
     Ilocation = fileparts(DB.Files{1});
     imgSet = imageSet(strcat(Ilocation,'\..'),'recursive'); % Recursively scan entire image set folder
     [training_set,test_set] = imgSet.partition(113); % Create training and test set
-    test_set = test_set.partition(76);
-knitr:: include_graphics("/img/Tech_Report7.png", error = FALSE)
-
-```
+    test_set = test_set.partition(76)
+    
     
 *Create visual vocabulary.*
     
@@ -221,6 +224,8 @@ knitr:: include_graphics("/img/Tech_Report7.png", error = FALSE)
     correctPredictions = (predictedOutcome == actualImType);
     validationAccuracy = sum(correctPredictions)/length(predictedOutcome) % Calculate validation accuracy
     toc % Stop timer
+    
+
     
 *Published with MATLAB® R2020b*
 
