--- a/content/blogs/AboutMe.Rmd
+++ b/content/blogs/AboutMe.Rmd
@@ -19,15 +19,13 @@ After 3 years of exponential personal growth, I graduated with a first class and
 From an early age I have benefited from being what I have denominated as a *sponge*. This means that I am able to soak in all information around me quickly and make use of it. This also implies that my personality, manners and desires change depending on the people that I surround myself with, which can be both beneficial and a disadvantage. Luckily, I have been lucky to have a **great family and friends throughout my life**, who have guided me through the right path.
 
 ## My hobbies
-Whenever I have time, I practice sports. Here are a few photos that showcase what I usually do in my free time. 
+Whenever I have time, I practice sports. Here are a few photos that showcase what I usually do in my free time. Having lived next to the see my whole life, I like to practice water sports, especially windsurf and sailing. Being individual sports, they give me time to think, and through them I have been able to learn how to come up with solutions in desperate times from an early age. 
 
-Having lived next to the see my whole life, I like to practice water sports, especially windsurf and sailing. Being individual sports, they give me time to think, and through them I have been able to learn how to come up with solutions in desperate times from an early age. 
-
-```{r image 1, echo = FALSE, out.width=20%"}
+```{r image 1, echo = FALSE%, out.width= 30%"}
 knitr:: include_graphics("/img/windsurf.jpg", error = FALSE)
 ```
 
-```{r image 2, echo = FALSE, out.width="60%"}
+```{r image 2, echo = FALSE, out.width="40%"}
 knitr:: include_graphics("/img/Sailing2.jpeg", error = FALSE)
 ```
 
