--- a/content/blogs/My_Education.Rmd
+++ b/content/blogs/My_Education.Rmd
@@ -12,25 +12,21 @@ title: My Education
 ```{r image_1, echo = FALSE, out.width= "30%"}
 
 knitr:: include_graphics("/img/LBS_Logo.jpg", error = FALSE)
-
-
+knitr:: include_graphics("/img/warwick.png", error = FALSE)
+knitr:: include_graphics("/img/LogoSMM.jpg", error = FALSE)
 ```
 
+
 # London Business School
-## Master in Analytics and Management | 2021-2022
+## Master in Analytics and Management  2021-2022
 - Applied Statistics
 - Data Science for Business
 - Data Management
 - Using Data-Science Responsibly
 
-```{r image_2, echo = FALSE, out.width= "30%"}
-
-knitr:: include_graphics("/img/warwick.png", error = FALSE)
-
-```
 
 # University of Warwick 
-## BEng in Mechanical Engineering | 2018-2021
+## BEng in Mechanical Engineering  2018-2021
 Graduated with a First Class Honours Degree. 
 
 - Warwick Hyperloop: Dynamics Team Leader
@@ -38,12 +34,13 @@ Graduated with a First Class Honours Degree.
 - Warwick Basketball Club
 - Warwick Engineering Society
 
-```{r image_3, echo = FALSE, out.width= "30%"}
-
-knitr:: include_graphics("/img/LogoSMM.jpg", error = FALSE)
-
-```
 
 # Santa Maria del Mar, La Coruña
-## Spanish Baccalaureate
+## Spanish Baccalaureate  2003-2018
+
+- Best Spanish Baccalaureate results prize
+- 6 times chosen as year representative
+- Exchange in Bordeax, Frace
+- Exchange in Granby, Connecticut, USA
+- Attended Oswestry School Boarding School in the UK in 2013
 
